2011-02-09  Martin Jambor  <mjambor@suse.cz>

PR middle-end/45505
	* tree-sra.c (struct access): New flags grp_scalar_read and
	grp_scalar_write.  Changed description of assignment read and write
	flags.
	(dump_access): Dump new flags, reorder all of them.
	(sort_and_splice_var_accesses): Set the new flag accordingly, use them
	to detect multiple scalar reads.
	(analyze_access_subtree): Use the new scalar read write flags instead
	of the old flags.  Adjusted comments.

	* testsuite/gfortran.dg/pr25923.f90: Remove xfails.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@169964 138bc75d-0d04-0410-961f-82ee72b054a4